# db2model

./: .gitignore  Cargo.toml  README.md  reverse.py  reverse.sh
mytera/: handler.tera  model.tera  mysql_rbatis.json  rbatis.tera  reverse.yml  reverse_handler.yml  reverse_service.yml  reverse_vo.yml  service.tera  vo.tera
src/: db.rs  error.rs  lib.rs  main.rs
src/common/: response.rs
src/utils/: mod.rs
src/utils/serde/: mod.rs  serde_date.rs  serde_id.rs  serde_id_vec.rs
templates/: co_orm.tera  rbatis.tera  reverse.yml  vo.tera
tests/: test_model.rs
