[package]
name = "db2model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rbatis = "4.5"
rbs = "4.5"
rbdc-mysql={version="4.5"}
serde = {version = "1.0", features = ["derive"] }


[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
# dotenv="0.15"

# once_cell = "1.19"
